# remote-signer

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  ca.crt  example-server.crt  example-server.key  go.mod  go.sum  main.go  sample-mnemonic.txt
.github/workflows/: go.yml
keyvault/: vault.go  vault_test.go
keyvault/deterministic/: store.go
keyvault/mnemonic/: mnemonic_test.go  store.go
rpc/: BUILD.bazel  doc.go  remote_signer.go  remote_signer_test.go  server.go
